Attempt to fix overflow issue 4

--- a/src/index.css
+++ b/src/index.css
@@ -56,5 +56,7 @@ body,
 }
 
 .address {
-  overflow-wrap: "break-word"
+  overflow-wrap: "break-word";
+  word-wrap: "break-word";
+  flex-wrap: "wrap";
 }
